add main styles

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,8 +1,11 @@
+@import '../sassStyles/variables';
+
 .main {
-  min-height: 60vh;
-  min-width: 70vw;
+  min-height: 70vh;
+  min-width: 60vw;
   display: flex;
-  gap: 100px;
+  justify-content: space-between;
   padding: 10px 100px 10px 10px;
   border-radius: 20px;
+  background-color: $white;
 }
