--- a/src/components/FormContainer/FormContainer.scss
+++ b/src/components/FormContainer/FormContainer.scss
@@ -2,7 +2,6 @@
 
 .form-container {
   @include flex-column;
-  min-width: 55%;
-  min-height: 100%;
-  padding: 50px 0 30px;
+  padding: 50px 100px 30px;
+  flex-grow: 1;
 }
