--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -4,8 +4,7 @@
   min-height: 70vh;
   min-width: 60vw;
   display: flex;
-  justify-content: space-between;
-  padding: 10px 100px 10px 10px;
+  padding: 10px 0 10px 10px;
   border-radius: 20px;
   background-color: $white;
 }
