--- a/src/components/FormNav/FormNav.scss
+++ b/src/components/FormNav/FormNav.scss
@@ -8,6 +8,11 @@ $fn: '.form-nav';
   display: flex;
   justify-content: space-between;
 
+  @include for-size(phone-only) {
+    padding: $space-md;
+    background-color: $white;
+  }
+
   &__button {
     @include reset-button;
 
