--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,10 +1,21 @@
 @import '../sassStyles/variables';
+@import '../sassStyles/mixins';
 
 .main {
+  $width: 60vw;
   min-height: 70vh;
-  min-width: 60vw;
+  min-width: $width;
   display: flex;
   padding: $space-sm 0 $space-sm $space-sm;
   border-radius: $radius-large;
   background-color: $white;
+
+  @include for-size(phone-only) {
+    @include flex-column;
+    align-items: center;
+    min-width: 100%;
+    padding: 0;
+    border-radius: 0;
+    background-color: transparent;
+  }
 }
