--- a/src/components/sassStyles/_global.scss
+++ b/src/components/sassStyles/_global.scss
@@ -9,14 +9,14 @@
 }
 
 body {
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu', 'Times New Roman', Times, serif;
   background-color: $magnolia;
   margin: 0;
 }
 
 span,
 input {
-  font-family: 'Ubuntu';
+  font-family: 'Ubuntu', 'Times New Roman', Times, serif;
 }
 
 h1,
