--- a/src/components/FormContainer/FormContainer.scss
+++ b/src/components/FormContainer/FormContainer.scss
@@ -10,7 +10,7 @@
   }
 
   @include for-size(phone-only) {
-    padding: $space-md $space-md 0;
+    padding: 0;
     margin-top: calc($space-xl * -1);
     width: 100%;
   }
