--- a/src/components/sassStyles/_typography.scss
+++ b/src/components/sassStyles/_typography.scss
@@ -2,16 +2,19 @@
   font-family: 'Ubuntu';
   src: url(../../assets/fonts/Ubuntu-Bold.ttf);
   font-weight: 700;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Ubuntu';
   src: url(../../assets/fonts/Ubuntu-Medium.ttf);
   font-weight: 500;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Ubuntu';
   src: url(../../assets/fonts/Ubuntu-Regular.ttf);
   font-weight: 400;
+  font-display: swap;
 }
