--- a/src/components/sassStyles/_mixins.scss
+++ b/src/components/sassStyles/_mixins.scss
@@ -2,9 +2,13 @@
 
 @mixin for-size($size) {
   @if $size == phone-only {
-    @media (max-width: 700px) { @content; }
+    @media (max-width: 500px) { @content; }
   } @else if $size == tablet {
-    @media (max-width: 900px) { @content; }
+    @media (max-width: 800px) { @content; }
+  } @else if $size == desktop-small {
+    @media (max-width: 1000px) { @content; }
+  } @else if $size == desktop-smaller {
+    @media (max-width: 1300px) { @content; }
   }
 }
 
@@ -28,9 +32,14 @@
   margin-bottom: $space-sm;
   color: $marine-blue;
 
-  @include for-size(phone-only) {
-    font-size: $fs-primary-lg;
+  @include for-size(desktop-small) {
+    font-size: $fs-title;
+    margin-bottom: $space-xs;
   }
+
+  // @include for-size(tablet) {
+  //   font-size: $fs-primary-lg;
+  // }
 }
 
 @mixin form-subtitle {
@@ -38,9 +47,14 @@
   margin-bottom: $space-lg;
   color: $cool-gray;
 
-  @include for-size(phone-only) {
+  @include for-size(desktop-small) {
     font-size: $fs-primary-sm;
     margin-bottom: $space-md;
+  }
+
+  @include for-size(tablet) {
+    // font-size: $fs-primary-sm;
+
   }
 }
 
